testsuite/bsc.typechecker/typeclasses/ATFDuplicateParam.bs.bsc-out.expected
checking package dependencies
compiling ATFDuplicateParam.bs
Error: "ATFDuplicateParam.bs", line 6, column 7: (T0159)
  Type family declaration for `Foo' has duplicate parameter `a'
